--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@syncfusion/ej2-react-circulargauge": "^29.1.33",
     "@tailwindcss/vite": "^4.1.3",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
+    "react-circular-gauge": "^1.1.1",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
